--- a/videoconference_app/templates/videocall.html
+++ b/videoconference_app/templates/videocall.html
@@ -32,9 +32,9 @@ window.onload = function () {
         // @param 5: Username
     const roomID = getUrlParams(window.location.href)['roomID'] || (Math.floor(Math.random() * 10000) + "");
     const userID = Math.floor(Math.random() * 10000) + "";
-    const userName = "{{ name }}"
-    const appID = 0; //change this
-    const serverSecret = "your server secret"; // change this
+    const userName = "userName" + userID;
+    const appID = 2144388728;
+    const serverSecret = "68b560b3ebce5134c281f5a785f95215";
     const kitToken = ZegoUIKitPrebuilt.generateKitTokenForTest(appID, serverSecret, roomID, userID, userName);
 
     
@@ -49,8 +49,8 @@ window.onload = function () {
                 mode: ZegoUIKitPrebuilt.VideoConference,
             },
                 
-           	turnOnMicrophoneWhenJoining: false,
-           	turnOnCameraWhenJoining: false,
+           	turnOnMicrophoneWhenJoining: true,
+           	turnOnCameraWhenJoining: true,
            	showMyCameraToggleButton: true,
            	showMyMicrophoneToggleButton: true,
            	showAudioVideoSettingsButton: true,
