--- a/videoconference_app/templates/register.html
+++ b/videoconference_app/templates/register.html
@@ -1,13 +1,11 @@
 {% load static %}
 <!DOCTYPE html>
-<!---Coding By CoderGirl | www.codinglabweb.com--->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <!--<title>Login & Registration Form | CoderGirl</title>-->
-  <!---Custom CSS File--->
+  <title>Signup Form</title>
   <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
@@ -16,19 +14,29 @@
       <header>Signup</header>
       <form action="{% url 'register' %}" method="POST">
         {% csrf_token %}
-        <input type="text" placeholder="Enter your first name" name="first_name">
-        <input type="text" placeholder="Enter your last name" name="last_name">
-        <input type="text" placeholder="Enter your email" name="email">
-        <input type="password" placeholder="Create a password" name="password1">
-        <input type="password" placeholder="Confirm your password" name="password2">
+        <input type="text" placeholder="Enter your first name" name="first_name" required>
+        <input type="text" placeholder="Enter your last name" name="last_name" required>
+        <input type="email" placeholder="Enter your email" name="email" required>
+        <input type="password" placeholder="Create a password" name="password1" required>
+        <input type="password" placeholder="Confirm your password" name="password2" required>
+
+        <!-- Dropdown to select role -->
+        <select name="role" required>
+          <option value="" disabled selected>Select Role</option>
+          <option value="teacher">Teacher</option>
+          <option value="student">Student</option>
+        </select>
+
         <input type="submit" class="button" value="Signup">
+
+        <!-- Display errors if any -->
         <center>
           {% if error %}
           <p style="color: red;">{{ error }}</p>
           {% endif %}
         </center>
-        
       </form>
+
       <div class="signup">
         <span class="signup">Already have an account?
           <a href="{% url 'login' %}"><label for="check">Signin</label></a>
